# AdventOfCode

./: .gitignore  CMakeLists.txt  README.md
2015/: CMakeLists.txt
2015/Day01/: CMakeLists.txt
2015/Day02/: CMakeLists.txt
2015/Day02/src/: gifts.cpp
2015/Day03/: CMakeLists.txt
2015/Day03/src/: houses.cpp
2015/Day04/: CMakeLists.txt  Problem2.txt
2015/Day04/src/: md5Hash.cpp
2015/Day05/: CMakeLists.txt  Problem2.txt
2015/Day05/src/: stringsnice.cpp
2015/Day06/: CMakeLists.txt
2015/Day06/src/: light.cpp
2015/Day07/: CMakeLists.txt  Problem2.txt
2015/Day07/src/: circuit.cpp
2015/Day08/: CMakeLists.txt
2015/Day08/src/: literalStrings.cpp
2015/Day09/: CMakeLists.txt  Problem1.txt  Problem2.txt
2015/Day1/: CMakeLists.txt
2015/Day1/src/: parenthesis.cpp
2015/Day10/: CMakeLists.txt  Problem1.txt  Problem2.txt
2015/Day10/src/: repeatNumbers.cpp
2015/Day11/: CMakeLists.txt  Problem1.txt  Problem2.txt
2015/Day11/src/: corporatePolicy.cpp
2015/Day12/: CMakeLists.txt  Problem1.txt  Problem2.txt
2015/Day12/src/: jsonnumbers.cpp
2015/Day13/: CMakeLists.txt  Problem1.txt  Problem2.txt
2015/Day13/src/: dinnertable.cpp
2015/Day14/: CMakeLists.txt  Problem1.txt  Problem2.txt
2015/Day14/src/: reindeer.cpp
2015/Day15/: CMakeLists.txt  Problem1.txt  Problem2.txt
2015/Day15/src/: hungry.cpp
2015/Day16/: CMakeLists.txt  Problem1.txt  Problem2.txt
2015/Day16/src/: auntSue.cpp
2015/Day17/: CMakeLists.txt  Problem1.txt  Problem2.txt
2015/Day17/src/: liters.cpp
2015/Day18/: CMakeLists.txt  Problem1.txt  Problem2.txt
2015/Day18/src/: lights.cpp
2015/Day19/: CMakeLists.txt  Problem1.txt  Problem2.txt
2015/Day19/src/: rudolhp.cpp
2015/Day2/: CMakeLists.txt  Problem2.txt
2015/Day20/: CMakeLists.txt  Problem1.txt  Problem2.txt
2015/Day20/src/: infiniteHouses.cpp
2015/Day21/: CMakeLists.txt  Problem1.txt  Problem2.txt
2015/Day21/src/: simulator.cpp
2015/Day22/: CMakeLists.txt  Problem1.txt  Problem2.txt
2015/Day22/include/: game.h
2015/Day22/src/: wizSimulator.cpp
2015/Day23/: CMakeLists.txt  Problem1.txt  Problem2.txt
2015/Day23/src/: turing.cpp
2015/Day24/: CMakeLists.txt  Problem1.txt  Problem2.txt
2015/Day24/src/: balance.cpp
2015/Day25/: CMakeLists.txt  Problem1.txt  end.txt
2015/Day25/src/: snow.cpp
2015/Day3/: CMakeLists.txt  Problem2.txt
2015/Day4/: CMakeLists.txt  Problem1.txt
2015/Day5/: CMakeLists.txt
2015/Day6/: CMakeLists.txt  Problem2.txt
2015/Day7/: CMakeLists.txt
2015/Day8/: CMakeLists.txt  Problem1.txt  Problem2.txt
2015/Day9/: CMakeLists.txt
2015/Day9/src/: route.cpp
2016/Day09/: CMakeLists.txt  Problem1.txt  Problem2.txt
2016/Day09/src/: explosives.cpp
2017/: CMakeLists.txt
2017/Day01/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day01/src/: inverseCaptcha.cpp
2017/Day02/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day02/src/: corruptionChecksum.cpp
2017/Day03/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day03/src/: spiralMemory.cpp
2017/Day04/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day04/src/: highEntropy.cpp
2017/Day05/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day05/src/: trampolines.cpp
2017/Day06/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day06/src/: memoryReallocation.cpp
2017/Day07/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day07/src/: recursiveCircus.cpp
2017/Day08/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day08/src/: registers.cpp
2017/Day09/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day09/src/: streamProcessing.cpp
2017/Day10/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day10/src/: knotHash.cpp
2017/Day11/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day11/src/: hexEd.cpp
2017/Day12/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day12/src/: digitalPlumber.cpp
2017/Day13/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day13/src/: packetScanners.cpp
2017/Day14/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day14/src/: diskDefragmentation.cpp
2017/Day15/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day15/src/: duelingGenerators.cpp
2017/Day16/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day16/src/: permutationPromenade.cpp
2017/Day17/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day17/src/: spinlock.cpp
2017/Day18/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day18/include/: duet_asm.h
2017/Day18/src/: duet.cpp
2017/Day19/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day19/src/: seriesofTubes.cpp
2017/Day20/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day20/src/: particleSwarm.cpp
2017/Day21/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day21/include/: grid.h
2017/Day21/src/: fractalArt.cpp
2017/Day22/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day22/src/: sporificaVirus.cpp
2017/Day23/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day23/include/: duet_asm.h
2017/Day23/src/: coprocessor.cpp
2017/Day24/: CMakeLists.txt  Problem1.txt  Problem2.txt
2017/Day24/src/: electromagnetic.cpp
2017/Day25/: CMakeLists.txt  Problem1.txt  end.txt
2017/Day25/src/: haltingProblem.cpp
2019/Day14/: CMakeLists.txt  Problem2.txt  input.txt
2019/Day14/src/: spaceStoichiometry.cpp
2023/: Answers.md  CMakeLists.txt
2023/cmake/: assign_source_group.cmake
2023/code/: CMakeLists.txt  main.cpp
2023/code/include/: day01_.h  day02_.h  day03_.h  day04_.h  day05_.h  day06_.h  day07_.h  (+18 more)
2023/gtest/: CMakeLists.txt
2023/problems/: day01Problem1.txt  day01Problem2.txt  day12Problem1.txt  day12Problem2.txt  day14Problem1.txt  day16Problem2.txt  day17Problem1.txt  day17Problem2.txt  day18Problem1.txt  day19Problem1.txt  day19Problem2.txt  day20Problem1.txt  day20Problem2.txt  day21Problem1.txt  day21Problem2.txt  day22Problem1.txt  day22Problem2.txt  day23Problem1.txt  day24Problem1.txt  day24Problem2.txt  day25Problem1.txt  day25Problem2.txt
2023/utils/: ansiColors.h  days.h  includes.h  paths.h  paths.h.in  utils.cpp  utils.h
2025/code/: CMakeLists.txt  clear.py
(+897 files in other folders)
