cmake_minimum_required(VERSION 2.8.9)
project(adventOfCode2015)

set(CMAKE_INSTALL_PREFIX "../")

add_subdirectory( Day01 )
add_subdirectory( Day02 )
add_subdirectory( Day03 )
add_subdirectory( Day04 )
add_subdirectory( Day05 )
add_subdirectory( Day06 )
add_subdirectory( Day07 )
add_subdirectory( Day08 )
add_subdirectory( Day09 )
add_subdirectory( Day10 )