cmake_minimum_required(VERSION 2.8.9)
project(adventOfCode2017)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_INSTALL_PREFIX "../")

add_subdirectory( Day01 )
add_subdirectory( Day02 )
add_subdirectory( Day03 )
add_subdirectory( Day04 )
add_subdirectory( Day05 )
add_subdirectory( Day06 )
add_subdirectory( Day07 )
add_subdirectory( Day08 )
add_subdirectory( Day09 )
add_subdirectory( Day10 )
add_subdirectory( Day11 )
add_subdirectory( Day12 )
add_subdirectory( Day13 )
add_subdirectory( Day14 )
add_subdirectory( Day15 )
add_subdirectory( Day16 )
add_subdirectory( Day17 )
add_subdirectory( Day18 )
add_subdirectory( Day19 )
add_subdirectory( Day20 )
add_subdirectory( Day21 )
add_subdirectory( Day22 )
add_subdirectory( Day23 )
add_subdirectory( Day24 )
add_subdirectory( Day25 )